--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "antd": "^5.27.4",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.18",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
