--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
   "structlog>=24.1.0",
   "uuid6>=2024.1.12",
   "orjson>=3.10.7",
+  "anthropic>=0.68.0",
 ]
 
 [project.optional-dependencies]
